--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
 
         <section id="logo">
 
-            <form method="get" target="_blank" action="../img/construção.png">
+            <form method="get" target="_blank" action="../html/seminovos.html">
             <button class="botao" type="submit">SemiNovos</button></form>
 
             <img src="../img/baggeto.png " alt="" style="width: 150 ;height: 150px; " />
