--- a/html/seminovos.html
+++ b/html/seminovos.html
@@ -21,9 +21,19 @@
         <br><br><br>
         <section id="empresa">
             
-            <div>
+            <div class="galeria">
                 <img src="../img/seminovos/v8/v8.jpg " alt=" " style="width: 300px ;height: 300px; " />
             </div>
+
+            <div class="galeria">
+                <img src="../img/seminovos/v8/v8-2.jpg " alt=" " style="width: 300px ;height: 300px; " />
+            </div>
+
+            <div class="galeria">
+                <img src="../img/seminovos/v8/v8-3.jpg " alt=" " style="width: 300px ;height: 300px; " />
+            </div>
+
+        </section>
 
     </body>
 
