--- a/html/seminovos-v8.html
+++ b/html/seminovos-v8.html
@@ -24,53 +24,32 @@
             <a href="#img1"><img src="../img/seminovos/v8/v8.jpg" class="min"> </a>
             <a href="#img2"><img src="../img/seminovos/v8/v8-2.jpg" class="min"> </a>
             <a href="#img3"><img src="../img/seminovos/v8/v8-3.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-4.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-5.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-6.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-7.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-8.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-9.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-10.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-11.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-12.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-13.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-14.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-15.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-16.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-17.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-18.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-19.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-20.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-21.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-22.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-23.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-24.jpg" class="min"> </a>
+            <a href="#img3"><img src="../img/seminovos/v8/v8-25.jpg" class="min"> </a>
 
             </ul>
 
         </section>
-
-        <section class="empresa" id="img1">
-
-            <div class="box_img"></div>
-
-                <a href="" class="btn" id="prev">&#171;</a>
-                <a href="" class="btn" id="close">X</a>
-                <a href="" class="btn" id="next">&#187;</a>
-
-                <img src="../img/seminovos/v8/v8.jpg" width="50%" height="50%">
-
-            </div>
-
-        </section>
-
-        <section class="lbox" id="img2">
-
-            <div class="box_img"></div>
-
-                <a href="" class="btn" id="prev">&#171;</a>
-                <a href="" class="btn" id="close">X</a>
-                <a href="" class="btn" id="next">&#187;</a>
-
-                <img src="../img/seminovos/v8/v8-2.jpg">
-
-            </div>
-
-        </section>
-
-        <section class="lbox" id="img3">
-
-            <div class="box_img"></div>
-
-                <a href="" class="btn" id="prev">&#171;</a>
-                <a href="" class="btn" id="close">X</a>
-                <a href="" class="btn" id="next">&#187;</a>
-
-                <img src="../img/seminovos/v8/v8-3.jpg">
-
-            </div>
-
-        </section>
-
 
     </body>
 
