--- a/html/seminovos-v8.html
+++ b/html/seminovos-v8.html
@@ -21,6 +21,8 @@
                 <div id="container">
                     <input type="radio" id="foto1" name="grupo">
                     <label for="foto1"><img src="../img/seminovos/v8/v8.jpg"></label>
+                    <input type="radio" id="foto1" name="grupo">
+                    <label for="foto2"><img src="../img/seminovos/v8/v8-2.jpg"></label>
                     <div class="slide">
                         <img src="../img/seminovos/v8/v8.jpg">
                         <img src="../img/seminovos/v8/v8-2.jpg">
