--- a/html/index.html
+++ b/html/index.html
@@ -671,7 +671,7 @@
 
         <div id="logo">
 
-            <a href="../img/construção.png" target="_blank">
+            <a href="../html/eventos.html" target="_blank">
             <img src="../img/eventos.png" onMouseOver="this.src='../img/eventos-2.png';" onMouseOut="this.src='../img/eventos.png';"/></a>
 
         </div>
