--- a/html/eventos.html
+++ b/html/eventos.html
@@ -72,7 +72,7 @@
 
             <div class="galeria">
                 
-                <a href="../html/festa-junina.html"> <img src="../img/eventos/Inauguracao/img1.jpg" alt=" " style="width: 200px ;height: 200px; " /></a>
+                <a href="../html/inauguracao.html"> <img src="../img/eventos/Inauguracao/img1.jpg" alt=" " style="width: 200px ;height: 200px; " /></a>
 
                 <div>
 
