--- a/html/index.html
+++ b/html/index.html
@@ -51,7 +51,7 @@
                 <a href="#ir_contato">Contato</a>
             </li>
             <li>
-                <a target="_blank" href="../img/construção.png">Trabalhe Conosco</a>
+                <a target="_blank" href="../html/formulario.html">Trabalhe Conosco</a>
             </li>
 
         </ul>
