--- a/html/index.html
+++ b/html/index.html
@@ -664,7 +664,7 @@
 
     <div id="logo">
         
-        <a href="../img/construção.png" target="_blank">
+        <a href="../html/formulario.html" target="_blank">
         <img src="../img/curriculo2.png" onMouseOver="this.src='../img/curriculo2-2.png';" onMouseOut="this.src='../img/curriculo2.png';"/></a>
 
     </div>    
