--- a/html/formulario.html
+++ b/html/formulario.html
@@ -19,6 +19,7 @@
         <form>
 
             Dados Pessoais:<br><br>
+
             Endereço de E-mail: <input type="email" name="e-mail" placeholder="digite seu e-mail aqui"><br><br>
             Nome: <input type="text" name="fname">
             SobreNome: <input type="text" name="lname"><br><br>
@@ -111,9 +112,8 @@
 
               <label for="textarea">Cargo Pretendido:</label>
               <br><br>
-                <textarea id="w3review" name="w3review" rows="4" cols="60">
-                 Deixe neste campo o cargo que pretende e pretensão salarial.
-                </textarea>
+                <textarea id="w3review" name="w3review" rows="4" cols="60" placeholder="Deixe neste campo o cargo que pretende e pretensão salarial.">
+                </textarea><br>
 
         </form>
 
