--- a/html/formulario.html
+++ b/html/formulario.html
@@ -16,7 +16,9 @@
 
     <body>
 
-        <form>
+      <section id="empresa">
+
+        <form >
 
             Dados Pessoais:<br><br>
 
@@ -116,7 +118,7 @@
                 </textarea><br>
 
         </form>
-
+      </section>
     </body>
 
 </html>
