--- a/html/testegaleria.html
+++ b/html/testegaleria.html
@@ -13,13 +13,6 @@
     
         <title>SemiNovos - Baggeto</title>
 
-        <script src="js/jquery-1.7.2.min.js"></script>
-        <script src="js/lightbox.js"></script>
-  
-        <link href="css/lightbox.css" rel="stylesheet" />
- 
-
-
     </head>
 
 <style>
@@ -166,23 +159,115 @@ img.hover-shadow {
 
 <body>
 
-    <section>
-<div class="row">
+    
+<div id="empresa">
+
+<br><br>
+
+  <section >
 
   <div class="column">
-    <img src="../img/seminovos/v8/v8.jpg" style="width:50%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+    <img src="../img/seminovos/v8/v8.jpg" width="150px" height="150px" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="../img/seminovos/v8/v8-2.jpg" style="width:50%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
+    <img src="../img/seminovos/v8/v8-2.jpg" width="150px" height="150px" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="../img/seminovos/v8/v8-3.jpg" style="width:50%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
+    <img src="../img/seminovos/v8/v8-3.jpg" width="150px" height="150px" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="../img/seminovos/v8/v8-4.jpg" style="width:50%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+    <img src="../img/seminovos/v8/v8-4.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
   </div>
-</div>
+
+  <div class="column">
+    <img src="../img/seminovos/v8/v8-5.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/v8/v8-6.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/v8/v8-7.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/v8/v8-8.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/v8/v8-9.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/v8/v8-10.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/v8/v8-11.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/v8/v8-12.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/v8/v8-13.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/v8/v8-14.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/v8/v8-15.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/v8/v8-16.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/v8/v8-17.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/v8/v8-18.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/v8/v8-19.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/v8/v8-20.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/v8/v8-21.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/v8/v8-22.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/v8/v8-23.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/v8/v8-24.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/v8/v8-25.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+
 </section>
+
+</div>
+
+
 
 <div id="myModal" class="modal">
   <span class="close cursor" onclick="closeModal()">&times;</span>
