--- a/html/seminovos.html
+++ b/html/seminovos.html
@@ -24,7 +24,7 @@
             
             <div class="galeria">
 
-                <a href="../html/testegaleria.html"> <img src="../img/seminovos/v8/v8-2.jpg " alt=" " style="width: 200px ;height: 200px; " /></a>
+                <a href="../html/seminovos-v8.html"> <img src="../img/seminovos/v8/v8-2.jpg " alt=" " style="width: 200px ;height: 200px; " /></a>
 
                 <div>
                 
