--- a/html/index.html
+++ b/html/index.html
@@ -304,9 +304,9 @@
 
         <!--Imagem Certificado Sassmaq-->
 
-        <div>
+        <div class="galeria">
 
-            <img src="../img/empresa/certificado_sassmaq.jpg " alt=" " style="width: 138px ;height: 156px; " />
+            <a href="../html/certificado-sasmaq.html"> <img src="../img/empresa/certificado_sassmaq.jpg " alt=" " style="width: 200px ;height: 200px; " /></a>
 
         </div>
 
