--- a/html/index.html
+++ b/html/index.html
@@ -689,7 +689,7 @@
 
         <div id="logo">
 
-            <h4 class="titulo_azul_menor">Links Populares</h4>
+            <h4 class="titulo_azul_menor">Acesso Restrito</h4>
 
             <li><a href="https://br924.hostgator.com.br:2096/" target="_blank">Web Mail</a></li>
             <br>
@@ -697,8 +697,6 @@
             <li><a href="../html/eventos.html" target="_blank">Eventos</a></li>
             <!--<img src="../img/eventos.png" onMouseOver="this.src='../img/eventos-2.png';" onMouseOut="this.src='../img/eventos.png';"/></a>-->
             <br>
-            
-            <li><a href="../html/formulario.html" target="_blank">Envie seu Currículo</a></li>
                 
         </div>
 
