--- a/html/index.html
+++ b/html/index.html
@@ -694,7 +694,7 @@
             <li><a href="https://br924.hostgator.com.br:2096/" target="_blank">Web Mail</a></li>
             <br>
 
-            <li><a href="../html/eventos.html" target="_blank">Eventos</a></li>
+            <li><a href="../html/login.html" target="_blank">Eventos</a></li>
             <!--<img src="../img/eventos.png" onMouseOver="this.src='../img/eventos-2.png';" onMouseOut="this.src='../img/eventos.png';"/></a>-->
             <br>
                 
