--- a/html/formulario.html
+++ b/html/formulario.html
@@ -48,13 +48,13 @@
       
       .container {
         border-radius: 0px;
-        background-color: #005b7f;
+        background-color: white;
         padding: 20px;
       }
 
       .container_2 {
         border-radius: 5px;
-        background-color: #b11116;
+        background-color: #005b7f;
         padding: 40px;
       }
       
